Fixes #42614, removes overflow hidden i added

--- a/site/src/scss/_component-examples.scss
+++ b/site/src/scss/_component-examples.scss
@@ -362,7 +362,6 @@
   .bd-example-resizable {
     position: relative;
     padding: .375rem;
-    overflow: hidden;
   }
 
   .bd-resizable-container {
